--- a/main.css
+++ b/main.css
@@ -3,13 +3,14 @@
   --color-bg-subtle: rgb(22, 27, 34);
   --color-header-bg: rgb(22, 27, 34);
   --color-text-default: rgb(230, 237, 243);
+  --color-text-muted: rgb(132, 141, 151);
   --color-border-default: rgb(48, 54, 61);
   --color-accent-fg: rgb(47, 129, 247);
 }
 
 /* Main Layout */
 body {
-  font-size: 16px;
+  font-size: 17px;
   font-family: 'Noto Sans', Arial, sans-serif;
   margin: 0;
   background-color: red;
@@ -41,7 +42,7 @@ main {
 }
 
 main > :last-child {
-  margin-bottom: 0 !important;
+  margin-bottom: 0;
 }
 
 /* Headings */
@@ -118,7 +119,20 @@ code.inline {
   padding: 0.2em 0.4em;
 }
 
-/* Footnoes */
+/* Block Quotes */
+blockquote {
+  margin: 0;
+  margin-bottom: 1em;
+  padding: 0 1em;
+  color: var(--color-text-muted);
+  border-left: 0.25em solid var(--color-border-default);
+}
+
+blockquote > :last-child {
+  margin-bottom: 0;
+}
+
+/* Footnotes */
 .footnotes {
   margin-top: 4em;
 }
